dom/media/MediaCache.cpp
@@ -2140,7 +2140,8 @@ MediaCacheStream::NotifyDataEndedInternal(uint32_t aLoadID,
 
   // Note that aStatus might have succeeded --- this might be a normal close
   // --- even in situations where the server cut us off because we were
-  // suspended. So we need to "reopen on error" in that case too. The only
+  // suspended. It is also possible that the server sends us fewer bytes than
+  // requested. So we need to "reopen on error" in that case too. The only
   // cases where we don't need to reopen are when *we* closed the stream.
   // But don't reopen if we need to seek and we don't think we can... that would
   // cause us to just re-read the stream, which would be really bad.
